--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,26 @@
-# Backend dependencies (marker-pdf is already in the project)
+# Backend dependencies
 fastapi>=0.100.0
 uvicorn[standard]>=0.22.0
 python-multipart>=0.0.6
 python-dotenv>=1.0.0
+
+# Marker-PDF core dependencies
+Pillow>=10.1.0
+pydantic>=2.4.2
+pydantic-settings>=2.0.3
+transformers>=4.45.2
+torch>=2.7.0
+tqdm>=4.66.1
+ftfy>=6.1.1
+rapidfuzz>=3.8.1
+surya-ocr>=0.17.1
+regex>=2024.4.28
+pdftext~=0.6.3
+markdownify>=1.1.0
+click>=8.2.0
+markdown2>=2.5.2
+filetype>=1.2.0
+google-genai>=1.0.0
+anthropic>=0.46.0
+scikit-learn>=1.6.1
+openai>=1.65.2
